--- a/BeneluxWebb/templates/stats/stats.html
+++ b/BeneluxWebb/templates/stats/stats.html
@@ -137,6 +137,12 @@
     </div>
 
     <div class="stats-wrapper">
+        <!-- Page selector - moved outside the table -->
+        <div class="page-length-selector">
+            <select id="pageLengthSelect" class="selectpicker" data-width="fit"></select>
+            <label for="pageLengthSelect" class="form-label me-2">entries per page</label>
+        </div>
+        
         <table id="stats-data-table" class="table table-striped table-hover align-middle table-sm">
             <!-- DataTable will be initialized here -->
         </table>
