Changes to page size picker

--- a/BeneluxWebb/static/css/pages/stats/stats_table.css
+++ b/BeneluxWebb/static/css/pages/stats/stats_table.css
@@ -118,6 +118,9 @@
   align-items: center;
   gap: 8px;
 }
+.page-length-selector .form-label.me-2 {
+  margin: 0 !important;
+}
 
 .page-length-selector .bootstrap-select .btn {
   border-radius: 8px;
