--- a/BeneluxWebb/static/css/pages/stats/stats.css
+++ b/BeneluxWebb/static/css/pages/stats/stats.css
@@ -20,6 +20,7 @@
 .stats-wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: flex-start;
   flex-shrink: 0;
   width: var(--stats-wrapper-width);
