--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -64,7 +64,6 @@
             <li><a href="/events">Events</a></li>
             <li><a href="/matches">Matches</a></li>
             <li><a href="/stats">Stats</a></li>
-            <li><a href="/leaderboard">Leaderboard</a></li>
           </ul>
 
           <!-- <div class="darkmode-toggle">
@@ -136,6 +135,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- JS: Core Plugins -->
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
