--- a/BeneluxWebb/templates/stats/stats_player.html
+++ b/BeneluxWebb/templates/stats/stats_player.html
@@ -121,7 +121,13 @@
         <label for="pageLengthSelect" class="form-label me-2">entries per page</label>
     </div>
     
-    <table id="stats-data-table" class="table table-striped table-hover align-middle table-sm">
+    <table id="stats-player-data-table" class="table custom-data-table custom-striped align-middle table-sm"></table>
         <!-- DataTable will be initialized here -->
     </table>
+{% endblock %}
+
+{% block javascript %}
+{{ super() }}
+
+<script src="{{ url_for('static', filename='js/stats/stats_player.js') }}"></script>
 {% endblock %}
