--- a/BeneluxWebb/static/css/components/table/page_entries.css
+++ b/BeneluxWebb/static/css/components/table/page_entries.css
@@ -12,7 +12,7 @@
   border-radius: 8px;
   font-weight: 500;
   padding: 0.25rem 0.75rem;
-  background-color: var(--background);
+  background-color: var(--secondary-light2);
   color: var(--text);
   border: 1px solid var(--border);
 }
