--- a/BeneluxWebb/static/css/pages/esea/esea.css
+++ b/BeneluxWebb/static/css/pages/esea/esea.css
@@ -15,21 +15,21 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  min-height: 100vh;
+  flex-shrink: 0;
 }
 
 .esea-wrapper {
   display: flex;
+  flex: 1;
   flex-direction: column;
   justify-content: flex-start;
-  
-  width: var(--esea-wrapper-width);
-  
   margin: 10px auto;
   padding-top: 0;
-
+  background-color: var(--background-light1);
   border-radius: var(--border-radius);
-
-  background-color: var(--background-light);
+  overflow: hidden;
+  min-width: 0;
 }
 
 #season-content {
@@ -42,21 +42,14 @@
   height: auto;
   max-height: 200px; 
   object-fit: cover;
-  border-radius: var(--border-radius);
 }
 
 .season-nav-box {
   display: flex;
   justify-content: center;
-  position: absolute;
-  z-index: 1000;
   width: 100%;
-  bottom: 0;
-  left: 0;
 
-  background: var(--secondary30);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  background: var(--background-dark1);
   border-block: 1px solid var(--border);
 }
 
@@ -72,9 +65,6 @@
   margin: 0 auto;
 
   list-style-type: none;
-
-  backdrop-filter: blur(50px);
-  -webkit-backdrop-filter: blur(20px);
 }
 
 .nav-item {
@@ -83,6 +73,8 @@
   width: max-content;
 
   border-inline: 1px solid var(--border);
+
+  background-color: var(--secondary-dark4)
 }
 
 .nav-link {
@@ -113,7 +105,7 @@
   white-space: nowrap;
 }
 
-.dropdown-menu {
+/* .dropdown-menu {
   position: absolute;
   min-width: 0;
   background-color: var(--card-bg);
@@ -125,7 +117,7 @@
 
 .dropdown-menu li {
   color: var(--text);
-}
+} */
 
 @media screen and (max-width: 992px) {
   .esea-wrapper {
