--- a/BeneluxWebb/static/css/pages/esea/esea_cards.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_cards.css
@@ -19,6 +19,25 @@
   --players-sub-width-scale: calc(1 - var(--players-main-width-scale));
 }
 
+/* 'Expand All' button */
+.btn.btn-custom {
+  background-color: var(--secondary-light2);
+  color: var(--text);
+  border: none;
+  border-radius: var(--border-radius-sm);
+  height: 32px;
+  width: auto;
+  padding: 0 12px;
+  font-size: 14px;
+  cursor: pointer;
+  box-shadow: 0 .125rem .5625rem -0.125rem rgba(0,0,0,.6);
+}
+.btn.btn-custom:hover {
+  background-color: var(--accent);
+  text-decoration: none;
+}
+
+
 /* === Division Separator Line === */
 .division-separator {
   display: flex;
@@ -41,7 +60,7 @@
   position: relative;
   margin: 1rem auto;
   padding: 8px;
-  background-color: var(--secondary30);
+  background-color: var(--background-dark1);
   color: var(--text);
 
   border: var(--border) 1px solid;
@@ -142,7 +161,7 @@
   width: fit-content;
   height: 100%;
 
-  border: 2px solid var(--border);
+  border: 2px solid var(--secondary-light3);
   border-radius: var(--border-radius-sm);
 
   z-index: 10;
@@ -242,6 +261,7 @@
   min-height: 0;
   overflow: hidden;
   text-align: center;
+  padding-inline: 5px;
 }
 .main-player-name strong {
   white-space: nowrap;
@@ -266,9 +286,9 @@
   height: calc(var(--team-card-height) * (1 - var(--score-boxes-height-scale)));
   width: calc(var(--players-box-width) * var(--players-sub-width-scale));
   
-  border-left: 1px solid var(--border);
+  border-left: 1px solid var(--secondary-light2);
 
-  padding-inline: 5px;
+  padding-inline: 8px;
 
   position: absolute;
   bottom: 0;
@@ -330,12 +350,12 @@
   width: 100%;
   height: 100%;
 
-  background-color: rgba(0,0,0,.4);
+  background-color: var(--secondary-light2);
   border: 1px solid var(--border);
   border-radius: var(--border-radius-sm);
 
   color: var(--text);
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 .details-btn button:hover {
   background-color: var(--accent);
