--- a/BeneluxWebb/static/css/pages/stats/stats.css
+++ b/BeneluxWebb/static/css/pages/stats/stats.css
@@ -1,6 +1,5 @@
 :root {
   /* Main wrapper width */
-  --stats-wrapper-width: calc(100% - var(--sidebar-width));
   --sidebar-width: 160px;
 
   --stats-width-percent: 90vw;
@@ -16,16 +15,23 @@
   min-height: 100vh;
   flex-shrink: 0;
 }
+.stats-page-wrapper.stats-player .sidebar.right {
+  display: none !important;
+}
+.stats-page-wrapper.stats-elo .sidebar.right {
+  display: block;
+}
 
 .stats-wrapper {
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  flex-shrink: 0;
-  width: var(--stats-wrapper-width);
   margin: 10px auto;
-  background-color: var(--background-light);
+  background-color: var(--background-light1);
   border-radius: var(--border-radius);
   overflow: hidden;
+  min-width: 0;
 }
+
