--- a/BeneluxWebb/templates/macros/filters/search_box.html
+++ b/BeneluxWebb/templates/macros/filters/search_box.html
@@ -1,6 +1,6 @@
 {% macro search_box(name, placeholder='', filter_options=[]) %}
 <div class="search-box" id="search-box-{{ name }}" data-search-name="{{ name }}">
-    <div class="search-box-wrapper">
+    <div class="search-box-wrapper sidebar-button">
         <i class="bi bi-search"></i>
         <input  
             type="text" 
