--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -7,10 +7,11 @@
     <script defer data-domain="beneluxcs.nl" src="https://analytics.beneluxcs.nl/js/script.file-downloads.hash.outbound-links.tagged-events.js"></script>
     <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
-    <!-- CSS: Google fonts -->
+    <!-- CSS: Google fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- CSS: Bootstrap, Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +62,6 @@
           <ul class="nav-links">
             <li><a href="/esea">ESEA</a></li>
             <li><a href="/hub">Hub</a></li>
-            <li><a href="/events">Events</a></li>
             <li><a href="/matches">Matches</a></li>
             <li><a href="/stats">Stats</a></li>
           </ul>
