--- a/BeneluxWebb/templates/macros/filters/countries_filter.html
+++ b/BeneluxWebb/templates/macros/filters/countries_filter.html
@@ -1,5 +1,5 @@
 {% macro countries_filter(countries)%}
-<div class="countries-filter">
+<div class="countries-filter sidebar-button">
     {% for country in countries %}
     <div class="country-filter-item">
         <input 
