--- a/BeneluxWebb/templates/macros/filters/filter_group.html
+++ b/BeneluxWebb/templates/macros/filters/filter_group.html
@@ -6,7 +6,7 @@
                 value="{{ val }}" 
                 name="{{ name }}" 
                 id="{{ name }}-{{ val }}">
-        <label class="checkbox__label" for="{{ name }}-{{ val }}">{{ val }}</label>
+        <label class="checkbox__label sidebar-button striped" for="{{ name }}-{{ val }}">{{ val }}</label>
     {% endfor %}
 </div>
 {% endmacro %}
@@ -20,7 +20,7 @@
                name="{{ name }}" 
                id="{{ name }}-{{ val }}"
                {% if init_checked == val %}checked data-default="true"{% endif %}>
-        <label class="checkbox__label" for="{{ name }}-{{ val }}">{{ val }}</label>
+        <label class="checkbox__label sidebar-button striped" for="{{ name }}-{{ val }}">{{ val }}</label>
     {% endfor %}
 </div>
 {% endmacro %}
