--- a/BeneluxWebb/templates/macros/filters/select_picker.html
+++ b/BeneluxWebb/templates/macros/filters/select_picker.html
@@ -7,7 +7,7 @@
 {% endmacro %}
 
 {% macro select_picker_multiple(name, values) %}
-<select class="selectpicker" id="{{ name }}-select" multiple data-actions-box="true" data-size="5">
+<select class="selectpicker sidebar-button" id="{{ name }}-select" multiple data-actions-box="true" data-size="5">
     {% for val in values %}
         <option>{{ val }}</option>
     {% endfor %}
